--- a/static/css/post-color.sass
+++ b/static/css/post-color.sass
@@ -2,10 +2,10 @@
 /* todo this sucks but is okay atm */
 #colemak-experience
     box-shadow: inherit
-    box-shadow: inset 0 -0.14em 0 #095092
+    box-shadow: inset 0 -0.14em 0 #2943b6
 
     &:hover
-        background-color: #095092
+        background-color: #2943b6
 
 #pass
     box-shadow: inherit
