--- a/static/css/style.sass
+++ b/static/css/style.sass
@@ -199,8 +199,8 @@ details
 img
     width: 100%
 
-    article &
-        margin: 1em 0 0 0
+    // article &
+        // margin: .5em 0 0 0
 
 p
     margin: 0.5em 0
